"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

Yet more fixes of Makefile.am/aclocal stuff: Make aclocal install needed macros
into the macros directory.
 Makefile.am
 aclocal.m4
Added:
 macros/pkg.m4
Arvid Norlander 2008-06-01

Fix Makefile.am so aclocal.m4 generation works correctly.
 Makefile.am
 aclocal.m4
Arvid Norlander 2008-06-01

Seems like the autotools define for LUA changed, update source to properly
use LUA.
 common/commands.c
 common/p_cmd.c
 common/script_lua.c
 common/config.h.in
 aclocal.m4
Arvid Norlander 2008-06-01

More cleanup of autotools mess. Also update svn:ignore where needed.
svn:ignore updated:
 .
 pixmaps
 gtk
 help
 common
 utils
 x11
 gtk-v2
 gtk-v2/themes
 gtk-v2/src
 gtk-v2/glade
 sound-src
Removed:
 utils/mkinstalldirs
 utils/depcomp
 utils/missing
 utils/install-sh
Arvid Norlander 2008-06-01

Remove some auto generated autotools files from the tree. Just run autogen.sh
to create them. This prevents the mess of different developers using different
versions of autotools, making commits a mess.
 utils/Makefile.in
 utils/config.guess
 utils/config.sub
 x11/Makefile.in
 gtk-v2/Makefile.in
 gtk-v2/themes/Makefile.in
 gtk-v2/src/Makefile.in
 gtk-v2/glade/Makefile.in
 sound-src/Makefile.in
 pixmaps/Makefile.in
 configure
 Makefile.in
 gtk/Makefile.in
 common/Makefile.in
 help/Makefile.in
Arvid Norlander 2008-06-01

Fix bug #1871476:] client script 'watch stats' error.
 common/script.c: don't work on initial length, as it'll affect other scripts.
  Make parameters const to avoid issues.
 common/script.h: change function definition.
Nicolas Weeger 2008-05-09

Apply patch by Jochen Suckfüll to move recently updated skills to top of list for
X11 client (could possibly be used for other clients).
 common/client.c client.h commands.c init.c
 x11/x11.c
Nicolas Weeger 2008-05-07

configure.in: detect lua 5.0 and 5.x as the build broke on some systems if the