@@ -1,22 +1,22 @@
-dnl Process this file with autoconf to produce a configure script.
+# Process this file with autoconf to produce a configure script.
 
-AC_INIT(crossfire-client, 2.0-dev)
+AC_INIT([crossfire-client],[2.0-dev])
 AC_CONFIG_SRCDIR(crossfire-client.spec)
 
 AC_CONFIG_AUX_DIR(utils)
 
-AC_CANONICAL_SYSTEM
+AC_CANONICAL_TARGET
 
 AM_INIT_AUTOMAKE
 
-AM_CONFIG_HEADER(common/config.h)
+AC_CONFIG_HEADERS([common/config.h])
 
-dnl AM_ACLOCAL_INCLUDE(macros)
+# AM_ACLOCAL_INCLUDE(macros)
 
-dnl these are subdirectories that have make files in them
+# these are subdirectories that have make files in them
 CF_SUBDIRS="common pixmaps utils help"
 
-dnl Check for some neeed programs
+# Check for some neeed programs
 AC_PATH_PROG(MKDIR, mkdir)
 AC_PATH_PROG(TAR, tar)
 AC_PATH_PROG(DEPEND, makedepend)
@@ -26,66 +26,66 @@ AC_PATH_PROG(PERL, perl)
 AC_PATH_PROG(AR, ar)
 AC_PATH_PROG(PKG_CONFIG, pkg-config)
 
-dnl Check if svnversion is avaliable to get the rev number
+# Check if svnversion is avaliable to get the rev number
 AC_PATH_PROG(SVNVERSION, svnversion)
 
-dnl Put this early on, since gtk may rely on it.
+# Put this early on, since gtk may rely on it.
 AC_PATH_XTRA
 
 SOUNDDIR="${datadir}/crossfire-client/sounds"
 
-dnl Add some options to 'configure'.
-AC_ARG_ENABLE(debug, [  --enable-debug          Turn on debugging [default=no]],
+# Add some options to 'configure'.
+AC_ARG_ENABLE(debug, [AS_HELP_STRING([--enable-debug], [Turn on debugging (default=no)])],
 if eval "test x$enable_debug = xyes"; then
     DEBUGFLAG="-g"
 fi)
 
-AC_ARG_ENABLE(ansi, [  --enable-ansi           Turn on strict ansi [default=no]],
+AC_ARG_ENABLE(ansi, [AS_HELP_STRING([--enable-ansi], [Turn on strict ansi (default=no)])],
                   , enable_ansi=$enableval)
 
-AC_ARG_ENABLE(sound, [  --disable-sound         Disable sound support [default=implement sound support                           if supported libraries exist]],
+AC_ARG_ENABLE(sound, [AS_HELP_STRING([--disable-sound], [Disable sound support (default=implement sound support if supported libraries exist)])],
                 sound=$enableval, sound=yes )
 
-dnl These are because some of us use OSS sound, even with ALSA or ALSA9 libs installed
+# These are because some of us use OSS sound, even with ALSA or ALSA9 libs installed
 
-AC_ARG_ENABLE(alsa9, [  --disable-alsa9         Disable ALSA9 sound support [default=use alsa9 sound support if alsa9 libraries exist]],
+AC_ARG_ENABLE(alsa9, [AS_HELP_STRING([--disable-alsa9], [Disable ALSA9 sound support (default=use alsa9 sound support if alsa9 libraries exist)])],
                 alsa9=$enableval, alsa9=yes )
 
-AC_ARG_ENABLE(alsa, [  --disable-alsa          Disable ALSA sound support [default=use alsa sound support if alsa libraries exist]],
+AC_ARG_ENABLE(alsa, [AS_HELP_STRING([--disable-alsa], [Disable ALSA sound support (default=use alsa sound support if alsa libraries exist)])],
                 alsa=$enableval, alsa=yes )
 
-AC_ARG_WITH(sound-dir, [  --with-sound-dir=dir    Directory where the sounds are located (default=/usr/local/lib/sounds)        ],
+AC_ARG_WITH(sound-dir, [AS_HELP_STRING([--with-sound-dir=dir], [Directory where the sounds are located (default=/usr/local/lib/sounds)])],
                 SOUNDDIR="$withval")
 
-dnl The follow two are really just a way to specify where the xpm information
-dnl resides if not with the normal X11 stuff (ie, in /usr/local and not /usr
-dnl /usr/X11
+# The follow two are really just a way to specify where the xpm information
+# resides if not with the normal X11 stuff (ie, in /usr/local and not /usr
+# /usr/X11
 
-AC_ARG_WITH(ldflags, [  --with-ldflags=dir      Provide additional linker directives to find libraries ],
+AC_ARG_WITH(ldflags, [AS_HELP_STRING([--with-ldflags=dir], [Provide additional linker directives to find libraries])],
                 EXTRA_LIB="$withval")
 
-AC_ARG_WITH(includes, [  --with-includes=dir     Provide different compiler options to find headers with ],
+AC_ARG_WITH(includes, [AS_HELP_STRING([--with-includes=dir], [Provide different compiler options to find headers with])],
                 EXTRA_INC="$withval")
 
-AC_ARG_WITH(loglevel, [  --with-logevel=level    Sets default loglevel ],
+AC_ARG_WITH(loglevel, [AS_HELP_STRING([--with-logevel=level], [Sets default loglevel])],
                 MINLOGLEVEL="$withval", MINLOGLEVEL=0)
 
-AC_ARG_ENABLE(gtkv1, [  --disable-gtkv1         Do not make original gtk client [default=make it if available]],
+AC_ARG_ENABLE(gtkv1, [AS_HELP_STRING([--disable-gtkv1], [Do not make original gtk client (default=make it if available)])],
                 gtkv1=$enableval, gtkv1=yes )
 
-AC_ARG_ENABLE(gtkv2, [  --disable-gtkv2         Do not make gtk-v2 client [default=make it if available]],
+AC_ARG_ENABLE(gtkv2, [AS_HELP_STRING([--disable-gtkv2], [Do not make gtk-v2 client (default=make it if available)])],
                 gtkv2=$enableval, gtkv2=yes )
 
-AC_ARG_ENABLE(cfgtk2, [  --enable-cfgtk2         Enable building the original gtkv1 client with GTK+ 2],
+AC_ARG_ENABLE(cfgtk2, [AS_HELP_STRING([--enable-cfgtk2], [Enable building the original gtkv1 client with GTK+2])],
                 cfgtk2=$enableval, cfgtk2=no)
 
-AC_ARG_ENABLE(sdl, [  --disable-sdl           Disable linking with the SDL library, default is to use it if available ],
+AC_ARG_ENABLE(sdl, [AS_HELP_STRING([--disable-sdl], [Disable linking with the SDL library, default is to use it if available])],
                 use_sdl=$enableval, use_sdl=yes)
 
-AC_ARG_ENABLE(dmalloc, [  --enable-dmalloc        Enable checking for dmalloc library, default is to use it if available ],
+AC_ARG_ENABLE(dmalloc, [AS_HELP_STRING([--enable-dmalloc], [Enable checking for dmalloc library, default is to use it if available])],
                 use_dmalloc=$enableval, use_dmalloc=no)
 
-AC_ARG_ENABLE(metaserver2, [  --disable-metaserver2   Do not build in metaserver2 support ],
+AC_ARG_ENABLE(metaserver2, [AS_HELP_STRING([--disable-metaserver2], [Do not build in metaserver2 support])],
                 metaserver2=$enableval, metaserver2=yes )
 
 AC_PROG_CC
@@ -102,11 +102,11 @@ case "$target" in
             CFLAGS="$CFLAGS -std1"
         fi
     ;;
-    dnl SGI systems don't need -lnsl -lsocket
+    # SGI systems don't need -lnsl -lsocket
     mips*-sgi-irix*)
         networklibs="no"
     ;;
-    dnl linux systems don't appear to need -lnsl
+    # linux systems don't appear to need -lnsl
     *-linux-*)
         networklibs="no"
     ;;
@@ -126,10 +126,10 @@ case "$target" in
     ;;
 esac
 
-dnl Check for what clients we are going to build in order of x, gtk-v1, gtk-v2
+# Check for what clients we are going to build in order of x, gtk-v1, gtk-v2
 
-dnl Check to see if X client will be built - no_x is set by AC_CHECK_XTRA if
-dnl X11 isn't found on the machine
+# Check to see if X client will be built - no_x is set by AC_CHECK_XTRA if
+# X11 isn't found on the machine
 if eval "test x$no_x = xyes" ; then
     AC_MSG_WARN(X11 not found - will not build X client)
     X_LIBS=""
@@ -141,9 +141,9 @@ else
     echo Extras: $X_EXTRA_LIBS
     echo Xpre: $X_PRE_LIBS
 fi    
-dnl End of X client check
+# End of X client check
 
-dnl Check to see if gtk-v1 client will be built
+# Check to see if gtk-v1 client will be built
 if eval "test x$gtkv1 = xyes" ; then
     if eval "test x$cfgtk2 = xyes" ; then
         PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.0.0, [HAVE_GTK2=yes], [HAVE_GTK2=no]) 
@@ -167,7 +167,7 @@ build original gtk-v1 client)
              AC_SUBST(GTK_LIBS)
              AC_SUBST(GTK_CFLAGS)
              CF_SUBDIRS="$CF_SUBDIRS gtk"
-             dnl AC_DEFINE(GTK_CLIENT, 1, [Define if the GTK client is built.])
+             # AC_DEFINE(GTK_CLIENT, 1, [Define if the GTK client is built.])
         else
             AC_MSG_WARN(GTK 1 not found - not building building gtk-v1 client)
             gtkv1=no
@@ -177,16 +177,16 @@ else
     AC_MSG_NOTICE(gtkv1 client build disabled)
 fi
 AC_SUBST(CFGTK)
-dnl End of gtk-v1 client check
+# End of gtk-v1 client check
 
-dnl Check to see if gtk-v2 client will be built
+# Check to see if gtk-v2 client will be built
 if eval "test x$gtkv2 = xyes" ; then
     if eval "test x$HAVE_GTK2 != xyes" ; then
-        dnl Check for GTK+ 2
+        # Check for GTK+ 2
         PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.0.0, [HAVE_GTK2=yes], [HAVE_GTK2=no]) 
     fi
     if eval "test x$HAVE_GTK2 = xyes" ; then
-        dnl Check for Libglade-2.0
+        # Check for Libglade-2.0
         PKG_CHECK_MODULES(LIBGLADE, libglade-2.0 >= 2.0.0, [HAVE_LIBGLADE=yes], [HAVE_LIBGLADE=no]) 
         if eval "test x$HAVE_LIBGLADE = xyes" ; then
             CF_SUBDIRS="$CF_SUBDIRS gtk-v2"
@@ -204,21 +204,21 @@ if eval "test x$gtkv2 = xyes" ; then
 else
     AC_MSG_NOTICE(gtkv2 client disabled)
 fi
-dnl End of gtk-v2 client check
+# End of gtk-v2 client check
 
-dnl End of client checks
+# End of client checks
 
 AM_MAINTAINER_MODE
 AC_SUBST(PACKAGE_LIBS)
 AC_SUBST(INTLLIBS)
 
-dnl sound.c needs sqrt.  So does png (on some systems)
-dnl lua also needs it, so put it near the top
+# sound.c needs sqrt.  So does png (on some systems)
+# lua also needs it, so put it near the top
 AC_CHECK_LIB(m, sqrt)
 
 AC_CHECK_LIB(pthread, pthread_create)
 
-dnl Check for lua 5.0 or 5.1.  See also: http://lua-users.org/wiki/AutoConfig
+# Check for lua 5.0 or 5.1.  See also: http://lua-users.org/wiki/AutoConfig
 AC_CHECK_LIB(lua, lua_call,
 [   # lua found
     AC_CHECK_LIB(lualib, luaopen_loadlib,
@@ -247,7 +247,7 @@ if eval "test x$lua_scripting != xyes" ; then
 fi
 AC_SUBST(LUA_LIBS)
 
-dnl Check for OpenGL
+# Check for OpenGL
 AC_CHECK_LIB(GL, main)
 AC_CHECK_LIB(GLU, main)
 AC_CHECK_LIB(opengl32, main)
@@ -261,9 +261,9 @@ if eval "test x$opengl = xyes" ; then
     fi
     AC_SUBST(OPENGL_LIBS)
 fi
-dnl End of OpenGL checks
+# End of OpenGL checks
 
-dnl Checks for programs.
+# Checks for programs.
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
@@ -290,9 +290,9 @@ if eval "test x$sound = xyes"; then
     AC_CHECK_HEADER(sys/soundcard.h, oss_sound=yes, oss_sound=no)
     AC_CHECK_HEADER(sys/audioio.h, sun_sound=yes, sun_sound=no)
 
-    dnl alsa9 sound support is now independent of other sound systems,
-    dnl so don't preclude compilation of others just because
-    dnl we find it.
+    # alsa9 sound support is now independent of other sound systems,
+    # so don't preclude compilation of others just because
+    # we find it.
 
     if eval "test x$alsa9_sound = xyes"; then
         echo "Using ALSA sound system (0.9.x)"
@@ -301,10 +301,10 @@ if eval "test x$sound = xyes"; then
         ALSA9_LIBS="-lasound -lm"
         SOUND_SRC="sound-src";
 
-        dnl It appears that alsa9 sound while having the same headers, is
-        dnl not backwards compatible, so if you have alsa 0.9 or later, you
-        dnl can't compile the old old sound daemon, so if we find alsa9,
-        dnl disable old alsa.
+        # It appears that alsa9 sound while having the same headers, is
+        # not backwards compatible, so if you have alsa 0.9 or later, you
+        # can't compile the old old sound daemon, so if we find alsa9,
+        # disable old alsa.
         alsa_sound="no";
     fi
 
@@ -342,8 +342,8 @@ if eval "test x$sound = xyes"; then
     # this fi is for the sound == yes check above
 fi
 
-dnl basically, only want to put sound-src once in the
-dnl subdirs listing.
+# basically, only want to put sound-src once in the
+# subdirs listing.
 if eval "test x$SOUND_SRC != x"; then
     CF_SUBDIRS="$CF_SUBDIRS $SOUND_SRC";
 fi
@@ -357,9 +357,9 @@ AC_SUBST(CF_SUBDIRS)
 AC_SUBST(ALSA9_TARGET)
 AC_SUBST(ALSA9_LIBS)
 
-dnl Check for SDL 1.1.3 and sdl_image
-dnl note SDL_image does not ship with an sdl-image-config
-dnl so I'll just assume it is in the same dir as SDL
+# Check for SDL 1.1.3 and sdl_image
+# note SDL_image does not ship with an sdl-image-config
+# so I'll just assume it is in the same dir as SDL
 if eval "test x$use_sdl = xyes"; then
     AM_PATH_SDL(1.1.3)
 
@@ -384,7 +384,7 @@ fi
 AC_SUBST(SDL_CFLAGS)
 AC_SUBST(SDL_LIBS)
 
-dnl The following hacks for modifying CFLAGS were borrowed from the GIMP.
+# The following hacks for modifying CFLAGS were borrowed from the GIMP.
 if test -n "$DEBUGFLAG"; then
     CFLAGS="$DEBUGFLAG $CFLAGS"
 fi
@@ -411,31 +411,31 @@ if eval "test x$GCC = xyes"; then
     fi
 fi
 
-dnl We need to check for socket/nsl here - some versions of the windowing
-dnl systems need these to properly link with X (I thought AC_PATH_XTRA should
-dnl take care of this, but apparently is does not).  If it is not here,
-dnl the check for xpm fails, and configure quits.
+# We need to check for socket/nsl here - some versions of the windowing
+# systems need these to properly link with X (I thought AC_PATH_XTRA should
+# take care of this, but apparently is does not).  If it is not here,
+# the check for xpm fails, and configure quits.
 
 if eval "test x$networklibs = xyes"; then
     AC_CHECK_LIB(nsl, main, LIBS="$LIBS -lnsl")
     AC_CHECK_LIB(socket, main, LIBS="$LIBS -lsocket")
 fi
 
-dnl Save and modify CPPFLAGS and LIBS (to include X and GTK paths temporarily).
+# Save and modify CPPFLAGS and LIBS (to include X and GTK paths temporarily).
 gcfc_save_CPPFLAGS="$CPPFLAGS"
 gcfc_save_LIBS="$LIBS"
 CPPFLAGS="$GTK_CFLAGS $CPPFLAGS $X_CFLAGS $EXTRA_INC"
 LIBS="$LIBS $GTK_LIBS $X_LIBS"
 
-dnl Put this here so we get the gdk libs
-dnl AC_CHECK_LIB(gdk_imlib, main,GTK_LIBS="$GTK_LIBS -lgdk_imlib")
+# Put this here so we get the gdk libs
+# AC_CHECK_LIB(gdk_imlib, main,GTK_LIBS="$GTK_LIBS -lgdk_imlib")
 
-dnl Need to check for Xext while we still have X_LIBS set.
+# Need to check for Xext while we still have X_LIBS set.
 AC_CHECK_LIB(Xext, main, X_LIBS="$X_LIBS -lXext")
 
-dnl AC_CHECK_LIB(Imlib, main, X_LIBS="$X_LIBS -lImlib")
+# AC_CHECK_LIB(Imlib, main, X_LIBS="$X_LIBS -lImlib")
 
-dnl Restore previous CPPFLAGS and LIBS.
+# Restore previous CPPFLAGS and LIBS.
 CPPFLAGS="$gcfc_save_CPPFLAGS"
 LIBS="$gcfc_save_LIBS"
 
@@ -445,28 +445,28 @@ CPPFLAGS="$CPPFLAGS $LIBCURL_CPPFLAGS"
 
 AC_SUBST(LIBS)
 
-dnl png on some systems need the zlib, so check for it
+# png on some systems need the zlib, so check for it
 AC_CHECK_LIB(z, main)
 
 AC_CHECK_LIB(png, main, , [AC_MSG_ERROR([You must have the png library installed to compile the client])])
 
-dnl not strictly needed, but since the X11 client uses it, lets use it here
+# not strictly needed, but since the X11 client uses it, lets use it here
 
-dnl Checks for header files.
+# Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h string.h sys/select.h pthread.h curl/curl.h)
 
-dnl Metaserver support is pretty critical to the client, so fail unless the
-dnl user explicity tells us to compile it without metaserver2 support.
+# Metaserver support is pretty critical to the client, so fail unless the
+# user explicity tells us to compile it without metaserver2 support.
 if eval "test x$ac_cv_header_curl_curl_h = xno" ; then
     if eval "test x$metaserver2 = xyes"; then
         AC_MSG_ERROR([curl/curl.h header not found, but metaserver2 support is enabled.  Install header file or use --disable-metaserver2]);
     fi
 fi
 
-dnl this is used to control default behavior when client starts up - even
-dnl if user has necessary files, if they use --disable-metaserver2, they
-dnl won't try to get data from those servers
+# this is used to control default behavior when client starts up - even
+# if user has necessary files, if they use --disable-metaserver2, they
+# won't try to get data from those servers
 if eval "test x$metaserver2 = xyes"; then
     AC_DEFINE_UNQUOTED(METASERVER2, 1, [If metaserver2 support is enabled.])
 else
@@ -479,14 +479,14 @@ if eval "test x$use_dmalloc = xyes"; then
     AC_CHECK_HEADERS(dmalloc.h)
 fi
 
-dnl Checks for typedefs, structures, and compiler characteristics.
+# Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_HEADER_TIME
 
 AC_CHECK_SIZEOF(long)
 AC_CHECK_SIZEOF(long long)
 
-dnl Checks for library functions.
+# Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
 AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(mkdir socket strcspn sysconf getaddrinfo)
@@ -495,9 +495,9 @@ AC_SUBST(XPM)
 AC_SUBST(SOUNDDIR)
 AC_SUBST(LIBXPM_LIB)
 
-dnl we need to run evals on the original variable names so that
-dnl they get expanded to the actual path - otherwise, the substitution
-dnl below will contain the unexpanded variables that don't resolve.
+# we need to run evals on the original variable names so that
+# they get expanded to the actual path - otherwise, the substitution
+# below will contain the unexpanded variables that don't resolve.
 
 test "x$prefix" = xNONE && prefix=$ac_default_prefix
 test "x$exec_prefix" = xNONE && exec_prefix='${prefix}'
@@ -505,12 +505,12 @@ test "x$exec_prefix" = xNONE && exec_prefix='${prefix}'
 ndatadir=`eval echo ${datadir}`
 ndatadir=`eval echo ${ndatadir}`
 
-dnl need to do this twice to cover variables within variables
+# need to do this twice to cover variables within variables
 nbindir=`eval echo ${bindir}`
 nbindir=`eval echo ${nbindir}`
 
-dnl Datadir should be working directory in Windows, as there is no set
-dnl installation directory (choosable at installation time)
+# Datadir should be working directory in Windows, as there is no set
+# installation directory (choosable at installation time)
 if eval "test x$win32 = xyes" ; then
     AC_DEFINE_UNQUOTED(CF_DATADIR, ".", [Location of read-only machine independent data.])
 else
@@ -521,15 +521,16 @@ AC_DEFINE_UNQUOTED(MINLOGLEVEL, ${MINLOGLEVEL}, [Default logging level.])
 
 AC_SUBST(CF_DATADIR)
 
-dnl Make all makefiles, even if CF_SUBDIRS are not set for that directory.
-dnl since CF_SUBDIRS won't be set in the top level makefile, we don't
-dnl descend into these subdirs.
+# Make all makefiles, even if CF_SUBDIRS are not set for that directory.
+# since CF_SUBDIRS won't be set in the top level makefile, we don't
+# descend into these subdirs.
 
-AC_OUTPUT([
+AC_CONFIG_FILES([
     Makefile gtk/Makefile x11/Makefile common/Makefile 
     sound-src/Makefile gtk-v2/Makefile pixmaps/Makefile
     gtk-v2/glade/Makefile gtk-v2/src/Makefile gtk-v2/themes/Makefile
-    help/Makefile utils/Makefile ] )
+    help/Makefile utils/Makefile ])
+AC_OUTPUT
 
 AC_MSG_NOTICE([])
 AC_MSG_NOTICE([Configuration summary....])
